this implementation didn't work

--- a/app/dts/bindings/zmk,combos.yaml
+++ b/app/dts/bindings/zmk,combos.yaml
@@ -20,6 +20,8 @@ child-binding:
       default: 50
     slow-release:
       type: boolean
+    order-dependant:
+      type: boolean
     layers:
       type: array
       default: [-1]
